<resources>
    <string name="app_name">맛고</string>

    <!-- HomeFragment -->
    <string name="home_fragment_app_name">맛고</string>
    <string name="home_fragment_season_specialty">추천 제철 특산물</string>
    <string name="home_fragment_specialty_kind">우리나라 특산물의 종류</string>

    <!-- SpecialtyFragment -->
    <string name="specialty_fragment_kind_search">아래 특산품 종류 중에서 검색해주세요</string>
    <string name="specialty_fragment_kind">종류</string>

    <!-- SpecialtyDetailFragment -->
    <string name="specialty_detail_fragment_search_result">찾으신 특산품 리스트입니다!</string>
    <string name="specialty_detail_fragment_search_null">검색한 특산품을 찾을수없어요.</string>

    <!-- MapFragment -->
    <string name="map_fragment_hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment_search_text">지역명을 입력해주세요</string>
    <string name="map_fragment_region_first">통영</string>
    <string name="map_fragment_region_second">대전</string>
    <string name="map_fragment_region_three">안성</string>
    <string name="map_fragment_region_four">파주</string>
    <string name="map_fragment_region_five">서산</string>
    <string name="map_fragment_region_six">세종</string>

    <!-- BottomsheetFragment -->
    <string name="bottom_sheet_fragment_specialty">특산물</string>

    <!-- RecipeDetailFragment -->
    <string name="recipe_detail_fragment_base_explain">레시피 간단 설명</string>
    <string name="recipe_detail_fragment_difficulty">난이도</string>
    <string name="recipe_detail_fragment_cooking_time">소요 시간</string>
    <string name="recipe_detail_fragment_ingredient_title">주요 재료</string>
    <string name="recipe_detail_fragment_steps">조리 방법</string>
    <string name="recipe_detail_fragment_top">레시피</string>
    <string name="recipe_detail_fragment_name">레시피명</string>
    <string name="recipe_detail_fragment_user">작성자</string>
    <string name="recipe_detail_fragment_time">30분</string>
    <string name="recipe_detail_fragment_simple_description">간단설명</string>
    <string name="recipe_detail_fragment_textview">TextView</string>
    <string name="recipe_detail_fragment_textview2">TextView</string>

    <!-- BottomsheetFragment_recipe_detail -->
    <string name="bottom_sheet_fragment_recipe_detail_ban_content">게시물 신고</string>
    <string name="bottom_sheet_fragment_recipe_detail_ban_user">사용자 신고</string>

    <!-- SignInFragment -->
    <string name="sign_in_fragment_top_banner_text">로그인</string>
    <string name="sign_in_fragment_id_hint">이메일 주소</string>
    <string name="sign_in_fragment_pw_hint">비밀번호</string>
    <string name="sign_in_fragment_easy_sign_in_indic_text">간편 로그인정보 저장</string>
    <string name="sign_in_fragment_sign_in_button_text">로그인</string>
    <string name="sign_in_fragment_sign_up_button_text">회원가입</string>
    <string name="sign_in_fragment_search_pw_button_text">비밀번호 찾기</string>
    <string name="sign_in_fragment_sign_in_other_way_text">다른 계정으로 로그인</string>
    <string name="sign_in_fragment_welcome">맛고에 오신것을\n환영합니다</string>
    <string name="sign_in_fragment_user_service">회원 서비스 이용을 위해 로그인을 해주세요.</string>

    <!-- SignUpFragment -->
    <string name="sign_up_fragment_top_banner_text">회원가입</string>
    <string name="sign_up_fragment_id_hint">이메일 주소</string>
    <string name="sign_up_fragment_pw_hint">비밀번호(6자리 이상)</string>
    <string name="sign_up_fragment_pw_check_hint">비밀번호 확인</string>
    <string name="sign_up_fragment_nickname_hint">닉네임</string>
    <string name="sign_up_fragment_id_duplication_check_indic_text">중복확인</string>
    <string name="sign_up_fragment_confirm_button_text">회원가입</string>
    <string name="sign_up_fragment_terms">맛고 서비스 이용약관에 동의해주세요</string>
    <string name="sign_up_fragment_checkbox_all">약관에 모두 동의</string>
    <string name="sign_up_fragment_age">[필수] 만 14세 이상</string>
    <string name="sign_up_fragment_privacy">[필수] 개인정보 수집 및 이용동의</string>

    <!-- MypageFragment -->
    <string name="mypage_fragment_top_banner_text">마이페이지</string>
    <string name="mypage_fragment_top_banner_button">회원탈퇴</string>
    <string name="mypage_fragment_sign_in_button_text">로그인</string>
    <string name="mypage_fragment_sign_out_text">로그아웃</string>
    <string name="mypage_fragment_sign_in_indic_text">로그인이 필요한 서비스입니다.</string>
    <string name="mypage_fragment_edit_profile_text">프로필 수정</string>
    <string name="mypage_fragment_user_recipe_indic_text">작성한 레시피</string>

    <!-- MakeRecipeFragment -->
    <string name="make_recipe_fragment_top_banner_text">레시피</string>
    <string name="make_recipe_fragment_make_button_text">게시</string>
    <string name="make_recipe_fragment_recipe_name_indic">레시피명</string>
    <string name="make_recipe_fragment_recipe_description_indic">레시피 소개</string>
    <string name="make_recipe_fragment_recipe_description_hint">레시피를 간단하게 소개해 주세요.</string>
    <string name="make_recipe_fragment_recipe_level_indic">레시피 난이도</string>
    <string name="make_recipe_fragment_recipe_cooking_time_indic">예상 소요 시간</string>
    <string name="make_recipe_fragment_recipe_cooking_level">난이도</string>
    <string name="make_recipe_fragment_recipe_cooking_time_hint">예상 소요 시간을 입력해 주세요.</string>
    <string name="make_recipe_fragment_recipe_ingredient_indic">주요 재료</string>
    <string name="make_recipe_fragment_recipe_ingredient_hint">재료를 선택해 주세요.</string>
    <string name="make_recipe_fragment_recipe_cooking_process_indic">조리방법</string>
    <string name="make_recipe_fragment_recipe_cooking_process_hint">조리방법을 입력해 주세요.</string>
    <string name="make_recipe_fragment_recipe_photo_indic">사진 등록</string>
    <string-array name="cooking_time_options">
        <item>레시피 소요 시간을 선택해 주세요.</item>
        <item>30분 이내</item>
        <item>30분</item>
        <item>1시간</item>
        <item>1시간 ~ 2시간</item>
        <item>2시간 이상</item>
    </string-array>

    <string-array name="cooking_level_options">
        <item>레시피 난이도를 선택해주세요.</item>
        <item>초보환영</item>
        <item>보통</item>
        <item>어려움</item>
    </string-array>

    <!-- RecipeFragment -->
    <string name="recipe_fragment_top_banner_text">레시피</string>
    <string name="recipe_fragment_make_button_text">레시피 작성</string>
    <string name="recipe_fragment_notice_text">해당 서비스는 추후에 업데이트 될 예정입니다</string>

    <!-- BookmarkFragment -->
    <string name="bookmark_fragment_top_banner_text">북마크한 레시피</string>
    <string name="bookmark_fragment_count">총 0개</string>
    <string name="bookmark_fragment_empty">북마크한 레시피가 없어요</string>

    <!-- region_alram_dialog -->
    <string name="region_dialog_title">특산물 데이터가 존재하는 지역</string>
    <string name="region_dialog_content">해당하는 지역에만 특산물 데이터가 존재합니다</string>

    <!-- custom_dialog -->
    <string name="dialog_bookmark_delete">북마크를 삭제하시겠습니까?</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_delete">삭제</string>

    <!-- home_banner -->
    <string name="home_banner">6월의 달콤한 선물,\n신선한 제철 옥수수!</string>

    <!-- home_kind_item -->
    <string name="item_home_kind">곡물</string>

    <!-- specialty_item -->
    <string name="item_specialty">참외</string>

    <!-- specialty_detail_item -->
    <string name="item_specialty_name">특산품명</string>
    <string name="item_specialty_region">지역</string>

    <!-- bottomsheet_item -->
    <string name="item_bottomsheet_recipe_name">레시피명</string>

    <!-- recipe_item -->
    <string name="item_recipe_name">레시피명</string>
    <string name="item_recipe_difficulty">#초보</string>
    <string name="item_recipe_time"># 30분</string>

    <!-- bookmark_item -->
    <string name="item_bookmark_recipe_name">레시피명</string>
    <string name="item_bookmark_recipe_description">레시피 기본설명</string>
    <string name="item_bookmark_recipe_difficulty">초보</string>
    <string name="item_bookmark_recipe_time">30분</string>

    <!--BannerFragment-->
    <string name="banner_fragment_link_confirm">외부 브라우저로 연결됩니다.\n연결하시겠습니까?</string>
    <string name="banner_fragment_dialog_stay">머무르기</string>
    <string name="banner_fragment_dialog_move">이동하기</string>
    <string name="banner_text_1">여름의 달콤한 선물,\n신선한 제철 옥수수!</string>
    <string name="banner_text_2">제철감자로 즐기는,\n여름의 맛있는 순간!</string>
    <string name="banner_text_3">여름의 바다향기,\n신선한 제철 홍가리비!</string>
    <string name="banner_text_4">여름의 진미,\n제철 홍게로 풍성하게!</string>
    <string name="banner_text_5">여름의 풍성함,\n제철 새꼬막으로!</string>
    <string name="banner_text_6">제철수박으로 즐기는,\n시원한 여름휴가!</string>
    <string name="banner_text_7">여름의 달콤한 감동,\n제철 밤호박을 만나보세요!</string>

</resources>